src/main/resources/forlab/grammar.txt
<Prog> ::= Program <DeclarationList1> { <OperatorsList1> }

<DeclarationList1> ::= <DeclarationList>
<DeclarationList> ::= <Declaration> ; | <DeclarationList> <Declaration> ;
<IdentList1> ::= <IdentList>
<Declaration> ::= <Type> <IdentList1>
<Type> ::= integer | short
<IdentList> ::= : Ident | <IdentList> , Ident

<OperatorsList1> ::= <OperatorsList>
<OperatorsList> ::= <Operator> ; | <OperatorsList> <Operator> ;

<Operator> ::= <Assignment>
<Assignment> ::= Ident = <Exp1>

<Exp1> ::= <Exp>
<Term1> ::= <Term>
<Multi1> ::= <Multi>

<Exp> ::= <Term1> | <Exp> + <Term1>| <Exp> - <Term1> | - <Term1>
<Term> ::= <Multi1> | <Term> * <Multi1> | <Term> / <Multi1>
<Multi> ::= <PrimaryExp> | <Multi> ** <PrimaryExp>
<PrimaryExp> ::= ( <Exp1> ) | Ident | Const
